# liteq

./: .gitignore  CHANGELOG.md  DEVELOPMENT.md  MANIFEST.in  PUBLISH.md  QUICKSTART.md  README.md  db.py  decorators.py  example.py  producer.py  pyproject.toml  recovery.py  registry.py  release.sh  requirements-dev.txt  setup.py  signals.py  worker.py
.github/workflows/: tests.yml
docs/: README_ru.md
examples/: README.md  basic.py  check_status.py  demo_monitor.py  email_campaign.py  fastapi_check_status.py  fastapi_example.py  long_running.py  monitoring.py  multiple_queues.py  priorities.py  scheduled_tasks.py  timeout_example.py
liteq/: __init__.py  cli.py  context.py  control.py  core.py  db.py  decorators.py  fastapi.py  manager.py  monitoring.py  producer.py  recovery.py  registry.py  scheduler.py  signals.py  watchdog.py  web.py  worker.py
liteq/templates/: dashboard.html
tests/: README.md  test_basic.py  test_cli.py  test_database.py  test_fastapi.py  test_integration.py  test_long_running.py  test_monitoring.py  test_recovery.py  test_scheduler.py  test_timeout.py  test_watchdog.py  test_worker.py
